fix article background image to work on mobile

--- a/src/style/scss/_base.scss
+++ b/src/style/scss/_base.scss
@@ -30,7 +30,7 @@ body, article.asset {
   width: 100%;
 }
 
-article.asset {
+article {
   background: url(http://www.gannett-cdn.com/experiments/usatoday/2015/03/race-together-quiz/img/black_pattern08.jpg) no-repeat center center fixed;
   background-size: cover;
 
